deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coolspots
  namespace: coolspots
spec:
  selector:
    app: coolspots
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8090
